# UrbiPittPatt

./: CMakeLists.txt
src/: CMakeLists.txt  OpenCVCamera.cpp  OpenCVCamera.h  OpenCVDisplay.cpp  OpenCVDisplay.h  PittPattDetector.cpp  PittPattDetector.h  upittpatt.cpp
